@@ -4,21 +4,13 @@
         <description>mod1 labels</description>
         <type>module</type>
         <csh_table></csh_table>
-        <labelContext type="array">
-        </labelContext>
     </meta>
     <data type="array">
         <languageKey index="default" type="array">
-            <label index="title">Speaking Url Management</label>
+            <label index="title">RealURL Management</label>
+            <label index="no_page_id">Please, select a page from the page tree.</label>
+            <label index="depth">Depth:</label>
+            <label index="function">Show:</label>
         </languageKey>
     </data>
-    <orig_hash type="array">
-        <languageKey index="default" type="array">
-            <label index="title" type="integer">142852360</label>
-        </languageKey>
-    </orig_hash>
-    <orig_text type="array">
-        <languageKey index="default" type="array">
-        </languageKey>
-    </orig_text>
 </T3locallang>
