@@ -1,3 +1,7 @@
+2010-09-08  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Refactoring modfunc1/index.php
+
 2010-08-31  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed forge issue #9285: t3blog problems with RealURL when using file names
